# BlackLilium

./: BlackLilium.kdev4  CMakeLists.txt
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/playground/: CMakeLists.txt  engineTest.cpp
